test/errors/type/list/sort.yasl
mt.lookup([], .sort)(1)
